Update industry CV for brainbox

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -99,16 +99,19 @@
 
 \section{Profile}
 
-\begin{supertabular}{>{\raggedright\arraybackslash}p{0.17\linewidth}>{\raggedright\arraybackslash}p{0.77\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
+\begin{supertabular}{>{\raggedright\arraybackslash}p{0.2\linewidth}>{\raggedright\arraybackslash}p{0.8\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
 
 	%------------------------------------------------
 	
-	\tableentrytwo{\textbf{Research}}{Design under uncertainty, remanufacturing, multidisciplinary design optimization}{}
+	\tableentrytwo{\textbf{Application domains}}{Aviation management, aerospace remanufacturing, multidisciplinary design optimization}{}
 
-	\tableentrytwo{\textbf{Technical}}{Numerical simulation, optimization, statistical modeling, machine learning}{}
+	\tableentrytwo{\textbf{Technical skills}}{Numerical simulation, optimization, statistical modeling, machine learning}{}
 
-	\tableentrytwo{\textbf{Software}}{MATLAB, Python, C++, R, mySQL, Abaqus, NX Siemens, ANSYS Fluent (basic usage)}{}
+	\tableentrytwo{\textbf{Software skills}}{MATLAB, Python (pandas,numpy, scipy, PyTorch, Flask), C++ (CUDA,Qt), R, mySQL}{}
 
+	\tableentrytwo{\textbf{IDEs}}{VSCode, Visual Studio, RStudio, XCode (basic)}{}
+
+	\tableentrytwo{\textbf{Engineering software}}{Abaqus, NX Siemens, ANSYS Fluent (basic usage)}{}
 	%------------------------------------------------
 	
 \end{supertabular}
@@ -315,8 +318,8 @@
 	%------------------------------------------------
 
 		
-	\tableentryrawthree{\textsc{Aug 2013 – Dec 2015}}{\textbf{ADNOC Graduate fellowship}}{90,000 USD}{}
-	\tableentryrawthree{}{\textit{Abu Dhabi National Oil Company}}{}{}
+	% \tableentryrawthree{\textsc{Aug 2013 – Dec 2015}}{\textbf{ADNOC Graduate fellowship}}{90,000 USD}{}
+	% \tableentryrawthree{}{\textit{Abu Dhabi National Oil Company}}{}{}
 	
 	%------------------------------------------------
 	
@@ -330,9 +333,11 @@
 	
 	%------------------------------------------------
 
+	\tableentryraw{Our \href{http://dx.doi.org/10.1115/1.4047908}{paper on scalable designs} was selected for the \textbf{2021 ASME Journal of Mechanical Design Editor's Choice award}}{\textsc{ASME IDETC 2022, St.~Louis, USA}}{spaceafter}
+
 	\tableentryraw{\textbf{Winner of best data visualization} and was ranked \textbf{2nd for best presentation} in the 11th Montreal Industrial Problem Solving Workshop}{\textsc{IVADO, Montreal, Canada}}{spaceafter}
 
-	\tableentryraw{Led the first UAE team to successfully qualifying and competing in the Baja SAE competition and awarded \textbf{2nd place} in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
+	% \tableentryraw{Led the first UAE team to successfully qualifying and competing in the Baja SAE competition and awarded \textbf{2nd place} in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
 
 	%------------------------------------------------
 	
@@ -345,6 +350,8 @@
 \section{Selected publications}
 
 %------------------------------------------------
+
+\longformpublication{A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Chamseddine and M. Kokkolaras (2022). Weekly nowcasting of new COVID-19 cases using past viral load measurements. \textit{Viruses}, \textit{14}(7): pp 1414. \href{https://www.mdpi.com/1999-4915/14/7/1414}{doi: 10.3390/V14071414}}
 
 \longformpublication{\textbf{K. Al Handawi} and M. Kokkolaras (2021). Optimization of infectious disease prevention and control policies using artificial life. \textit{IEEE Transactions on Emerging Topics in Computational Intelligence}, \href{https://doi.org/10.1109/TETCI.2021.3107496}{doi: 10.1109/TETCI.2021.3107496}
 ~\textit{funded by an NSERC discovery grant}}
@@ -413,7 +420,7 @@
 
 	\begin{itemize}\itemsep0em 
 		\item Competitive gaming
-		\item Powerlifting
+		% \item Powerlifting
 		\item Tabletop games (Warhammer)
 	\end{itemize}
 		
@@ -425,7 +432,7 @@
 
 	\begin{itemize}\itemsep0em 
 		\item 3D printing hobbyist
-		\item Car enthusiast
+		% \item Car enthusiast
 		\item Tinkering and restoration of old machines	
 	\end{itemize}
 
