Add CV for aeroengines

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -40,7 +40,7 @@
 
 \profilepic{} % Profile picture
 
-\cvname{Khalil Al Handawi} % Your name
+\cvname{Khalil Al Handawi, Ph.D} % Your name
 \cvjobtitle{Engineer, designer, and researcher} % Job title/career
 
 \cvdate{} % Date of birth
@@ -64,7 +64,7 @@
 \parbox[top][0.05\textheight][c]{\linewidth}{ % Parbox to hold the author name and CV text; fixed height to match the coloured box to the right, centred vertically and full line width
 	\vspace{-0.02\textheight} % Reduce whitespace above the parbox to separate it from the main content
 	\raggedright % left align text
-	{\Huge \textbf{\cvname}}\\\medskip % Your name
+	{\huge \textbf{\cvname}}\\\medskip % Your name
 }
 
 %----------------------------------------------------------------------------------------
@@ -105,7 +105,7 @@
 	
 	\tableentrytwo{\textbf{Application domains}}{Aviation management, aerospace remanufacturing, multidisciplinary design optimization}{}
 
-	\tableentrytwo{\textbf{Technical skills}}{Numerical simulation, optimization, statistical modeling, machine learning}{}
+	\tableentrytwo{\textbf{Technical skills}}{Numerical simulation, optimization, statistical modeling, machine learning, PLM, MBSE}{}
 
 	\tableentrytwo{\textbf{Software skills}}{MATLAB, Python (pandas,numpy, scipy, PyTorch, Flask), C++ (CUDA,Qt), R, mySQL}{}
 
@@ -184,9 +184,9 @@
 	{} % Location
 	{Research assistant} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Part of \textbf{Canadian/European industrial project} investigating additive repair technologies for aeroengine parts. I focused on optimization of aerospace design for AM remanufacturing.}{}
+	\tableentry{$\bullet$}{Part of \textbf{Canadian/European industrial project} investigating additive repair technologies for \textbf{aeroengine} parts. I focused on optimization of aerospace design for AM remanufacturing.}{}
 	\tableentry{$\bullet$}{Developed mathematical tools and \href{https://github.com/khbalhandawi/scale_AM_webapp}{software} for design space exploration and optimization achieving a \textbf{99.8\% reduction} in effort to explore a 4-dimensional design space relative to full factorial design.}{}
-	\tableentry{$\bullet$}{Participated in a \href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{technology transfer} at GKN Aerospace, providing Python training on said tools.}{}
+	\tableentry{$\bullet$}{Worked on a \href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{technology transfer} at \textbf{GKN Aerospace}, providing Python training on said tools.}{}
 	\tableentry{$\bullet$}{Resulted in the \textbf{\href{https://www.gknaerospace.com/en/our-technology/2022/additive-manufacturing-research-paper-receives-journal-of-mechanical-design-award/}{best paper}} award by the ASME Journal of Mechanical Design in 2021.}{spaceafter}
 
 	%------------------------------------------------
@@ -199,7 +199,7 @@
 	{}{} % Description
 	\tableentry{$\bullet$}{Research change propagation and absorption in engineering design (applied to aeroengine systems).}{}
 	\tableentry{$\bullet$}{Authored a \href{https://sed-group.github.io/mvmlib/index.html}{Python library} for margin and change propagation management in engineering systems.}{}
-	\tableentry{$\bullet$}{Used said library in design space exploration to concurrently develop and analyze \textbf{6,552 conceptual designs} of an aeroengine component and \href{https://khbalhandawi.github.io/projects/1_project/}{visualize the results} using interactive tools.}{spaceafter}
+	\tableentry{$\bullet$}{Used said library in design space exploration to concurrently develop and analyze \textbf{6,552 conceptual designs} of an \textbf{aeroengine component} and \href{https://khbalhandawi.github.io/projects/1_project/}{visualize the results} using interactive tools.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -421,7 +421,7 @@
 	\begin{itemize}\itemsep0em 
 		\item Competitive gaming
 		% \item Powerlifting
-		\item Tabletop games (Warhammer)
+		\item Tabletop games
 	\end{itemize}
 		
 	%----------------------------------------------------------------------------------------
@@ -433,7 +433,7 @@
 	\begin{itemize}\itemsep0em 
 		\item 3D printing hobbyist
 		% \item Car enthusiast
-		\item Tinkering and restoration of old machines	
+		\item Weightlifting and strength training
 	\end{itemize}
 
 	%----------------------------------------------------------------------------------------
