Add ANSYS cover letter for thermal systems

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -40,7 +40,7 @@
 
 \profilepic{} % Profile picture
 
-\cvname{Khalil Al Handawi, Ph.D} % Your name
+\cvname{Khalil Al Handawi, Ph.D.} % Your name
 \cvjobtitle{Engineer, designer, and researcher} % Job title/career
 
 \cvdate{} % Date of birth
