--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -105,7 +105,7 @@
 	
 	\tableentrytwo{\textbf{Application domains}}{Aviation management, aerospace remanufacturing, multidisciplinary design optimization}{}
 
-	\tableentrytwo{\textbf{Technical skills}}{Numerical simulation, optimization, statistical modeling, machine learning, PLM, MBSE}{}
+	\tableentrytwo{\textbf{Technical skills}}{Simulation, blackbox optimization, nonlinear programming, statistical modeling, machine learning}{}
 
 	\tableentrytwo{\textbf{Software skills}}{MATLAB, Python (pandas,numpy, scipy, PyTorch, Flask), C++ (CUDA,Qt), R, mySQL}{}
 
@@ -146,10 +146,10 @@
 	{Montr\'{e}al, Canada} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Analyze IATA data involving \textbf{25M flight schedules} using graph representation learning.}{}
-	\tableentry{$\bullet$}{Develop community detection algorithms for graphs with over \textbf{10K nodes} and \textbf{100K edges}.}{}
-	\tableentry{$\bullet$}{Organize flight schedule data into a mySQL database for  archival, and retrieval of data.}{}
-	\tableentry{$\bullet$}{Perform research on graph representation learning methods for analyzing the data.}{spaceafter}
+	\tableentry{$\bullet$}{Perform statistical analyses on IATA data involving flight schedules and passenger data.}{}
+	\tableentry{$\bullet$}{Apply community detection and graph representation learning algorithms on aviation networks.}{}
+	\tableentry{$\bullet$}{Maintain a mySQL database for archival, and retrieval of data.}{}
+	\tableentry{$\bullet$}{Extract insights and trends from learned representations relevant to air transportation.}{spaceafter}
 	
 	%------------------------------------------------
 	
@@ -171,10 +171,10 @@
 	{} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Researched simulation-based decision-making in public health and policy making during epidemics.}{}
-	\tableentry{$\bullet$}{Developed \href{https://covid-forecaster-lebanon.herokuapp.com/}{deep learning COVID-19 forecasting models} with an accuracy of \textbf{$\pm$50 daily cases}.}{}
-	\tableentry{$\bullet$}{Developed a hyperparameter optimization framework for machine learning based on direct search.}{}
-	\tableentry{$\bullet$}{Develop GPU accelerated \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{epidemic models} for high simulation throughput (\textbf{1000X }).}{}
+	\tableentry{$\bullet$}{Develop simulation-based decision-making tools for policy making during epidemics.}{}
+	\tableentry{$\bullet$}{Developed \href{https://covid-forecaster-lebanon.herokuapp.com/}{statistical COVID-19 forecasting models}.}{}
+	\tableentry{$\bullet$}{Developed a direct search-based hyperparameter tuning framework for non-parametric models.}{}
+	\tableentry{$\bullet$}{Develop GPU accelerated \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{agent-based models} for high simulation throughput.}{}
 
 	%------------------------------------------------
 
@@ -184,8 +184,8 @@
 	{} % Location
 	{Research assistant} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Part of \textbf{Canadian/European industrial project} investigating additive repair technologies for \textbf{aeroengine} parts. I focused on optimization of aerospace design for AM remanufacturing.}{}
-	\tableentry{$\bullet$}{Developed mathematical tools and \href{https://github.com/khbalhandawi/scale_AM_webapp}{software} for design space exploration and optimization achieving a \textbf{99.8\% reduction} in effort to explore a 4-dimensional design space relative to full factorial design.}{}
+	\tableentry{$\bullet$}{Worked in a \textbf{Canadian/European industrial project} for additive repair technologies in aerospace parts. I focused on process optimization and remanufacturing options.}{}
+	\tableentry{$\bullet$}{Developed mathematical tools and \href{https://github.com/khbalhandawi/scale_AM_webapp}{software} for design space exploration and visualization of high-dimensional design spaces that are based on blackbox optimization.}{}
 	\tableentry{$\bullet$}{Worked on a \href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{technology transfer} at \textbf{GKN Aerospace}, providing Python training on said tools.}{}
 	\tableentry{$\bullet$}{Resulted in the \textbf{\href{https://www.gknaerospace.com/en/our-technology/2022/additive-manufacturing-research-paper-receives-journal-of-mechanical-design-award/}{best paper}} award by the ASME Journal of Mechanical Design in 2021.}{spaceafter}
 
@@ -198,8 +198,8 @@
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
 	\tableentry{$\bullet$}{Research change propagation and absorption in engineering design (applied to aeroengine systems).}{}
-	\tableentry{$\bullet$}{Authored a \href{https://sed-group.github.io/mvmlib/index.html}{Python library} for margin and change propagation management in engineering systems.}{}
-	\tableentry{$\bullet$}{Used said library in design space exploration to concurrently develop and analyze \textbf{6,552 conceptual designs} of an \textbf{aeroengine component} and \href{https://khbalhandawi.github.io/projects/1_project/}{visualize the results} using interactive tools.}{spaceafter}
+	\tableentry{$\bullet$}{Authored a \href{https://sed-group.github.io/mvmlib/index.html}{Python library} for assessing the robustness of design solutions to changing requirements.}{}
+	\tableentry{$\bullet$}{Used said library in design space exploration to concurrently develop and analyze an aeroengine component design case and \href{https://khbalhandawi.github.io/projects/1_project/}{visualize the results} using interactive tools.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -209,8 +209,8 @@
 	{Abu Dhabi, UAE} % Location
 	{Visiting researcher, Center for Autonomous Robotic Systems} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Reverse engineer a UAV for firefighting and carrying an extinguishant payload of \textbf{6 litres}.}{}
-	\tableentry{$\bullet$}{Achieved a flight time of \textbf{18 minutes} and resisting winds with speeds upto \textbf{8m/s}.}{}
+	\tableentry{$\bullet$}{Reverse engineer a drone for delivering an extinguishant payload for high-rise building fires.}{}
+	\tableentry{$\bullet$}{Work with the flight controls team to achieve stable flights against gust and extraneous factors.}{}
 
 	%------------------------------------------------
 
@@ -220,9 +220,9 @@
 	{} % Location
 	{Research Assistant, Asset Integrity Management Systems Lab} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Developed fiber optic structural monitoring sensors for mitigating upto \textbf{\$1M of corrosion costs}.}{}
-	\tableentry{$\bullet$}{Developed and simulated a \href{https://khbalhandawi.github.io/projects/6_project/}{fiber optic-based corrosion sensor} with an accuracy of \textbf{$\pm$2mm/s}.}{}
-	\tableentry{$\bullet$}{Developed a new accelerated corrosion testing setup to simulate \textbf{2 years of corrosion in 2 hours}.}{}
+	\tableentry{$\bullet$}{Developed fiber optic structural monitoring sensors for mitigating corrosion costs.}{}
+	\tableentry{$\bullet$}{Simulated a \href{https://khbalhandawi.github.io/projects/6_project/}{fiber optic-based corrosion sensor} using waveguide equations and models.}{}
+	\tableentry{$\bullet$}{Developed accelerated corrosion testing setups to simulate said sensor prototypes.}{}
 	%------------------------------------------------
 	
 \end{supertabular}
