--- a/Khalil_CV_semiacademic.tex
+++ b/Khalil_CV_semiacademic.tex
@@ -103,19 +103,19 @@
 
 	%------------------------------------------------
 	
-	\tableentrytwo{\textbf{Research}}{Design under uncertainty, additive manufacturing, multidisciplinary design optimization, and decision making using agent-based modeling}{}
+	\tableentrytwo{\textbf{Research}}{Design under uncertainty, additive manufacturing, multidisciplinary design optimization, agent-based modeling, transportation network modeling}{}
 
 	\tableentrytwo{\textbf{Technical}}{}{}
 	\tableentrytwo{\textsc{Engineering systems}}{-~~Design for changeability and reliability, uncertainty quantification}{}
 	\tableentrytwo{}{-~~Analysis and allocation of design margins}{spaceafter}
 	\tableentrytwo{\textsc{Modeling and}}{-~~Finite element methods (thermomechanical, structural, electromagnetic)}{}
-	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods, system dynamics models}{spaceafter}
+	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods, system dynamics models, Monte Carlo methods}{spaceafter}
 	% \tableentrytwo{}{-~~System dynamics models}{spaceafter}
 	\tableentrytwo{\textsc{Optimization:}}{-~~Blackbox and derivative-free optimization (mesh-adaptive direct search)}{}
 	% \tableentrytwo{}{-~~Multidisciplinary optimization (Non-hierarchical analytical target cascading)}{}
-	\tableentrytwo{}{-~~Stochastic optimization}{spaceafter}
-	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning (recurrent neural networks)}{}
-	\tableentrytwo{}{-~~Hyperparameter optimization}{spaceafter}
+	\tableentrytwo{}{-~~Linear, nonlinear programming, and heuristics}{spaceafter}
+	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning (recurrent neural networks), Graph representation learning}{}
+	\tableentrytwo{}{-~~Hyperparameter optimization and model selection}{spaceafter}
 
 	\tableentrytwo{\textbf{Software}}{MATLAB/Simulink, Python (pandas, PyTorch, matplotlib, flask), C++ (CUDA, OpenMP, Qt)}{}
 	\tableentrytwo{}{R (ggplot2, tidyverse), mySQL, FEA (Abaqus, ANSYS), CAD (SOLIDWORKS, NX Siemens), DAQ (NI LabVIEW)}{}
@@ -209,11 +209,11 @@
 	{Montr\'{e}al, Canada} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Won a Natural Sciences and Engineering Research Council of Canada (NSERC) fellowship to pursue research at UdeM.}{}
 	\tableentry{$\bullet$}{Work with the International Air Transport Association (IATA) to develop data analytics solutions for codesharing and flight scheduling in the civil aviation industry.}{}
 	\tableentry{$\bullet$}{Assess the effectiveness and impact of the IATA operation safety audit (IOSA) on air travel accessibility and cooperation between airlines.}{}
-	\tableentry{$\bullet$}{Construct a mariaDB mySQL database for storing flight records spanning the last decade for research purposes.}{}
-	\tableentry{$\bullet$}{Leverage unsupervised learning and expectation maximization algorithms to discover latent variables in the IATA dataset using R, Python, and Julia packages.}{spaceafter}
+	\tableentry{$\bullet$}{Maintain a mySQL database for storing flight records and other relevant data for research purposes.}{}
+	\tableentry{$\bullet$}{Use unsupervised learning, community detection, graph representation learning to discover latent community structures in the IATA dataset.}{spaceafter}
+	\tableentry{$\bullet$}{Won a Natural Sciences and Engineering Research Council of Canada (NSERC) fellowship.}{}
 	
 	%------------------------------------------------
 	
@@ -223,9 +223,8 @@
 	{Montr\'{e}al, Canada} % Location
 	{Adjunct Lecturer} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Was the sole instructor of the Engineering System Optimization course (MECH559).}{}
-	\tableentry{$\bullet$}{Developed Python notebooks as teaching aids for the students to understand the implementation of modern optimization algorithms \href{https://github.com/khbalhandawi/MECH559_notebooks/tree/master}{https://github.com/khbalhandawi/MECH559\_notebooks}.}{}
-	\tableentry{$\bullet$}{Modernized the course to use the latest optimization and machine learning tools.}{}
+	\tableentry{$\bullet$}{The sole instructor of the Engineering System Optimization course (MECH559).}{}
+	\tableentry{$\bullet$}{Develop Python notebooks as teaching aids for the students to understand the implementation of modern optimization algorithms \href{https://github.com/khbalhandawi/MECH559_notebooks/tree/master}{https://github.com/khbalhandawi/MECH559\_notebooks}.}{}
 
 	%------------------------------------------------
 
@@ -236,8 +235,7 @@
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
 	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED lab.}{}
-	\tableentry{$\bullet$}{Authored a Python library for performing margin and change propagation management in engineering systems: \href{https://sed-group.github.io/mvmlib/index.html}{https://sed-group.github.io/mvmlib/index.html}.}{}
-	\tableentry{$\bullet$}{Conduct research into design margins and links to probabilistic quantities such as reliability.}{}
+	\tableentry{$\bullet$}{Author a Python library for sensitivity and robustness analyses in engineering systems: \href{https://sed-group.github.io/mvmlib/index.html}{https://sed-group.github.io/mvmlib/index.html} using Monte Carlo approaches and post-optimality analysis.}{}
 	\tableentry{$\bullet$}{Foster collaborations with the industry (GKN Aerospace) and write research proposals.}{spaceafter}
 
 	%------------------------------------------------
@@ -248,11 +246,10 @@
 	{Montr\'{e}al, Canada} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Developed a deep learning forecasting model for COVID-19 trajectories based on cross-sectional patient data. The forecasting model is a sequence-to-sequence model that uses encoder and decoder RNNs with attention to transform cross-sectional patient data to a COVID-19 trajectory.}{}
-	\tableentry{$\bullet$}{Deployed the trained forecasting model online as a {Flask} application: \href{https://covid-forecaster-lebanon.herokuapp.com/}{https://covid-forecaster-lebanon.herokuapp.com/}.}{}
-	\tableentry{$\bullet$}{Applied novel stochastic optimization techniques for hyperparameter optimization problems in machine learning and used them to fine tune the sequence-to-sequence model.}{}
-	\tableentry{$\bullet$}{Built and published a stochastic model of the spread of COVID-19 in a population using artificial life models (agent-based approaches) and used stochastic optimization algorithms to solve for optimal public health policies \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{https://github.com/khbalhandawi/COVID\_SIM\_GPU}.}{}
-	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization (NoHiMDO) with applications to aircraft design.}{spaceafter}
+	\tableentry{$\bullet$}{Develop statistical forecasting models for COVID-19 trajectories based on cross-sectional patient data. The forecasting models range in complexity from simple least squares models to recurrent neural network architectures.}{}
+	\tableentry{$\bullet$}{Deploy the trained forecasting models as a {Flask} application: \href{https://covid-forecaster-lebanon.herokuapp.com/}{https://covid-forecaster-lebanon.herokuapp.com/}.}{}
+	\tableentry{$\bullet$}{Use stochastic blackbox optimization for hyperparameter tuning of said models.}{}
+	\tableentry{$\bullet$}{Build and publish a stochastic model of the spread of COVID-19 in a population using agent-based models and used stochastic blackbox optimization algorithms to identify possible public health policies \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{https://github.com/khbalhandawi/COVID\_SIM\_GPU}.}{}
 
 	%------------------------------------------------
 
@@ -262,14 +259,14 @@
 	{Montr\'{e}al, Canada} % Location
 	{Research assistant} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) grant (56,000 CAD).}{}
-	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
-	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes using transient coupled thermal/mechanical FEA simulations.}{}
+	\tableentry{$\bullet$}{Develop mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
+	\tableentry{$\bullet$}{Develop a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes using transient coupled thermal/mechanical FEA simulations.}{}
 	\tableentry{$\bullet$}{Write automation scripts using NX Siemens and Abaqus Python APIs to automate geometry generation, meshing, anaylsis, and postprocessing of parametric simulations.}{}
-	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
-	\tableentry{$\bullet$}{Used machine learning models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements by using a Jacobian matrix.}{}
-	\tableentry{$\bullet$}{Authored a {Flask} application for conducting sensitivity and scalability studies on design of experiments data:
+	\tableentry{$\bullet$}{Co-develop a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
+	\tableentry{$\bullet$}{Use surrogate models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements by using a Jacobian matrix.}{}
+	\tableentry{$\bullet$}{Author a {Flask} application for conducting sensitivity and scalability studies on design of experiments data:
 	\href{https://github.com/khbalhandawi/scale_AM_webapp}{https://github.com/khbalhandawi/scale\_AM\_webapp}.}{spaceafter}
+	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) doctoral award.}{}
 
 	%------------------------------------------------
 
@@ -279,8 +276,8 @@
 	{Trolh\"{a}ttan, Sweden} % Location
 	{Visiting researcher} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Participated in a technology transfer to translate my research on optimization into industrial practice by provided training modules and workshops to GKN engineers (MATLAB and Python).}{}
-	\tableentry{$\bullet$}{Surveyed GKN engineers about their experience designing areoengine components for engine system manufacturers to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexibility and robustness.}{}
+	\tableentry{$\bullet$}{Participate in a technology transfer to translate my research on optimization into industrial practice by provided training modules and workshops to GKN engineers (MATLAB and Python).}{}
+	\tableentry{$\bullet$}{Survey GKN engineers about their experience designing areoengine components for engine system manufacturers to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexibility and robustness.}{}
 	\tableentry{$\bullet$}{Set up advanced design automation and exploration tools to be used as part of GKN's workflow (engineering workbench) by integrated parametric design software (NX Siemens) with simulation software (Abaqus and ANSYS) to evaluate hundreds of concepts for a turbine rear frame.}{spaceafter}
 
 	%------------------------------------------------
@@ -291,11 +288,11 @@
 	{Abu Dhabi, UAE} % Location
 	{Visiting researcher} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Performed sensor fusion research for unmanned aerial vehicle (UAV) control and maneuvering.}{}
-	\tableentry{$\bullet$}{Fused UAV inertial measurement unit (IMU) data with high latency positioning measurements from an Optitrack motion capture system to obtain smooth high frequency attitude estimates suitable for control applications.}{}
-	\tableentry{$\bullet$}{Used the principles of quaternion transformation to translate observed attitude in the IMU reference frame to an inertial reference frame.}{}
-	\tableentry{$\bullet$}{Repurposed a DJI Wind 4 UAV for firefighting by redesigning the drone platform to carry an extinguishant payload.}{}
-	\tableentry{$\bullet$}{Co-authored a paper based on the repurposed UAV to be published in a special issue of the Journal of Field Robotics.}{spaceafter}
+	\tableentry{$\bullet$}{Conduct sensor fusion research for Remotely Piloted Aircraft Systems (RPAS).}{}
+	\tableentry{$\bullet$}{Fuse RPAS inertial measurement unit (IMU) data with high latency positioning measurements from an Optitrack motion capture system to obtain smooth high frequency attitude estimates suitable for control applications.}{}
+	\tableentry{$\bullet$}{Use the principles of quaternion transformation to translate observed attitude in the IMU reference frame to an inertial reference frame.}{}
+	\tableentry{$\bullet$}{Repurpose a DJI Wind 4 RPAS for firefighting by redesigning the drone platform to carry an extinguishant payload.}{}
+	\tableentry{$\bullet$}{Co-author a paper based on the repurposed RPAS to be published in a special issue of the Journal of Field Robotics.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -305,12 +302,11 @@
 	{Abu Dhabi, UAE} % Location
 	{Research Assistant} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Developed fiber optic sensors for monitoring mechanical and electrochemical phenomena such as strain, temperature, and corrosion.}{}
-	\tableentry{$\bullet$}{Used optical time-domain reflectometery for distributed fiber optic sensing of large structures such as oil pipelines.}{}
-	\tableentry{$\bullet$}{Worked with fiber Bragg grating sensors for localized measurements of strain and temperature and their subsequent translation into corrosion rate.}{}
-	\tableentry{$\bullet$}{Established a correlation between photoelastic properties of various waveguides (distrubuted and localized sensors) and the corrosion rate in oil and gas structures.}{}
-	\tableentry{$\bullet$}{Simulated photonic corrosion sensors in MATLAB and Abaqus for sensor design and calibration.}{}
-	\tableentry{$\bullet$}{Developed a novel accelerated corrosion testing setup based on electrochemical cells for validating and verifiying the proposed corrosion sensors and establishing the calibration curve.}{spaceafter}
+	\tableentry{$\bullet$}{Develop fiber optic sensors for monitoring mechanical and electrochemical phenomena such as strain, temperature, and corrosion.}{}
+	\tableentry{$\bullet$}{Work with fiber Bragg grating sensors for localized measurements of strain and temperature and their subsequent translation into corrosion rate.}{}
+	\tableentry{$\bullet$}{Establish a correlation between photoelastic properties of various waveguides (distrubuted and localized sensors) and the corrosion rate in oil and gas structures.}{}
+	\tableentry{$\bullet$}{Simulate photonic sensors in MATLAB by solving waveguide and Maxwell's equations.}{}
+	\tableentry{$\bullet$}{Develop a novel accelerated corrosion testing setup based on electrochemical cells for validating and verifiying the proposed corrosion sensors and establishing the calibration curve.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -320,11 +316,11 @@
 	{Abu Dhabi, UAE} % Location
 	{Khalifa university Baja SAE team leader} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Led the first UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
-	\tableentry{$\bullet$}{Guided the assembly team on integrating vehicle subsystems (chassis, suspension, and power train).}{}
-	\tableentry{$\bullet$}{Performed structural optimization on vehicle chassis using MATLAB and ANSYS.}{}
-	\tableentry{$\bullet$}{Provided workshops on finite elemenet anaylsis and computer aided design to team members.}{}
-	\tableentry{$\bullet$}{Prepared assembly and part drawings for the manufacturing team.}{spaceafter}
+	\tableentry{$\bullet$}{Lead the first UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
+	\tableentry{$\bullet$}{Guide the assembly team on integrating vehicle subsystems (chassis, suspension, and power train).}{}
+	\tableentry{$\bullet$}{Perform structural optimization on vehicle chassis using MATLAB and ANSYS.}{}
+	\tableentry{$\bullet$}{Provide workshops on finite elemenet anaylsis and computer aided design to team members.}{}
+	\tableentry{$\bullet$}{Prepare assembly and part drawings for the manufacturing team.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -442,10 +438,10 @@
 
 %------------------------------------------------
 
-% \textbf{\large Submitted preprints}\medskip \hrule \medskip
+\textbf{\large Submitted preprints}\medskip \hrule \medskip
 
-% \longformpublication{
-% A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Chamseddine and M. Kokkolaras (2021). Predicting COVID-19 incidences from patients’ viral load using deep-learning. \textit{medRxiv}} \href{https://doi.org/10.1101/2021.08.14.21262064}{doi: 10.1101/2021.08.14.21262064}
+\longformpublication{\textbf{K. Al Handawi}, A. Brahma, D. Wynn, M. Kokkolaras and O. Isaksson (2023). Design space exploration and evaluation using margin-based trade-offs. \textit{Journal of Mechanical Design}\\
+\textit{funded partially by NSERC and Area of Advance of Chalmers University}}
 
 %------------------------------------------------
 
@@ -475,7 +471,7 @@
 \textit{funded by Abu Dhabi National Oil Company}}
 
 %------------------------------------------------
-
+\newpage
 \textbf{\large Conference Papers}\medskip \hrule \medskip
 
 \longformpublication{\textbf{K. Al Handawi}, P. Andersson, M. Panarotto, O. Isaksson and M. Kokkolaras (2020). Scalable set-based design optimization and remanufacturing for meeting changing requirements. \textit{in Proceedings of the International Design Engineering Technical Conferences \& Computers and Information in Engineering Conference}, Virtual conference, IDETC2020.}
@@ -545,7 +541,7 @@
 %	PERSONAL INTERESTS
 %----------------------------------------------------------------------------------------
 
-\section{Personal Interests}
+\section{Converstation starters}
 
 \columnratio{0.5,0.5} % The relative ratios of the three columns in the references
 
@@ -554,8 +550,7 @@
 \begin{paracol}{2} % Begin the multi-column environment
 
 	\begin{itemize}\itemsep0em 
-		\item Gymnastics and calisthenics training
-		\item Powerlifting
+		\item 3D printing hobbyist
 		\item Competitive gaming	
 	\end{itemize}
 		
@@ -566,9 +561,8 @@
 	%----------------------------------------------------------------------------------------
 
 	\begin{itemize}\itemsep0em 
-		\item 3D printing hobbyist
-		\item Car modding (muscle cars) and drag racing
-		\item Tinkering/modifying any machine I get my hands on!		
+		\item Weightlifting and strength training
+		\item Automotive enthusiast
 	\end{itemize}
 
 	%----------------------------------------------------------------------------------------
